--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,8 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
+    "no-unused-vars": "off",
+    "react/react-in-jsx-scope": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "prettier/prettier": ["error", { "endOfLine": "auto" }]
   },
