--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
     - name: Pull Master Branch
       run: |
-        cd /var/www/puzztory/ && sudo git pull origin master
+        cd /var/www/puzztory/ && sudo git pull origin master -u ${{ secrets.TOKEN }}
     - name: Pull Master Branch
       run: |
         cd /var/www/puzztory/ && sudo yarn build
