--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "swiper": "^10.3.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.6"
